// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`expense summary should be displayed correctly for list with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    2
     
    expenses
     totaling 
    $4.30
  </h1>
</div>
`;

exports[`expense summary should be displayed correctly for list with one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totaling 
    $4.30
  </h1>
</div>
`;
